# microsheet

./: CMakeLists.txt  PythonProcess.cpp  PythonProcess.hpp  README.md  SpreadSheet.cpp  SpreadSheet.hpp  SpreadSheetDelegate.cpp  SpreadSheetDelegate.hpp  SpreadSheetItem.cpp  SpreadSheetItem.hpp  main.cpp  main.py  runcsv  spreadsheet.cpp  spreadsheet.hpp  spreadsheetdelegate.cpp  spreadsheetdelegate.hpp  spreadsheetitem.cpp  spreadsheetitem.hpp  util.hpp
console/: QConsoleIODevice.cpp  QConsoleIODevice.h  QConsoleWidget.cpp  QConsoleWidget.h
